Update Tomcat shells to reflect current configuration needs.